# epipelagic-ns

./: CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TASKS.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: tests.yml
data/dns/: README.md
docs/: ARCHITECTURE.md
epipelagic/: __init__.py
epipelagic/cascade/: __init__.py  phase_diagram.py  shell_model.py  solver.py  taichi_solver.py
epipelagic/core/: __init__.py  cohomology.py  complex.py  spectral.py  transfer_matrix.py
epipelagic/data/: __init__.py  dns_processor.py  jhtdb_loader.py  synthetic.py
epipelagic/langlands/: __init__.py
epipelagic/quantum/: __init__.py
epipelagic/topology/: __init__.py  barcode_analysis.py  gudhi_interface.py  persistence_features.py  persistent.py
epipelagic/utils/: __init__.py  io.py  validation.py
epipelagic/visualization/: __init__.py
examples/: basic_cascade.py
experiments/phase1_foundation/: GPU_VALIDATION_REPORT.md  PHASE1_VALIDATION_SUMMARY.md  REYNOLDS_SWEEP_REPORT.md  TOPOLOGY_EXTRACTION_REPORT.md  gpu_benchmark_results.json  reynolds_sweep_results.json  topology_extraction_results.json
scripts/: benchmark_gpu.py  compare_cohomology.py  download_dns_data.py  reynolds_sweep.py  topology_extraction.py
tests/: __init__.py
tests/unit/: test_cascade_complex.py  test_shell_model.py
